Fixed alignment glitch

--- a/css-files/index.css
+++ b/css-files/index.css
@@ -96,9 +96,6 @@ body {
 }
 
 #form-container * {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   box-sizing: border-box;
 }
 
@@ -115,73 +112,52 @@ body {
 }
 
 .encourage {
-  margin-top: 10px; 
+  margin: 5% 0%;
 }
+
 
 #main-form {
-  /* border: solid red; */
-  height: 50%;
   width: 100%;
-  flex-direction: column;
-  justify-content: center;
-  /* border: solid green; */
-}
-
-#duplicate-account {
-  /* border: solid yellow; */
-  margin-bottom: 20px;
-}
-
-form {
-  width: 100%;
-  max-width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  color: rgb(174, 174, 174);
-  /* border: solid red; */
+  height: 80%;
 }
 
 #form-prompt {
+  text-align: center;
   font-size: 20px;
   font-weight: 500;
   opacity: 0.8;
-  /* border: solid red; */
+}
+
+form {
+}
+
+.form-row {
+  display: flex;
+  width: 100%;
+  padding-top: 3%;
+  justify-content: space-around;
 }
 
 .label-input-pair {
   width: 100%;
-  max-width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  border: 2px solid green;
-  margin: 1%;
-}
+  padding: 2%;
 
-input, label {
-  width: 100%;
-  max-width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 label {
-  max-width: fit-content;
-  border: solid rgb(216, 72, 15);
+  font-size: 12px;
+  font-weight: 600;
+  opacity: 0.7;
+  color: aliceblue;
 }
+
+#duplicate-account {
+  margin-bottom: 20px;
+  display: flex;
+}
+
 #login {
   color:blueviolet
 }
-
-.form-row {
-  box-sizing: border-box;
-  width: 100%;
-  margin: 1%;
-  font-size: 14px;
-}
-
-@media only screen and (max-width: 960px) {
-
-}
-
-
-
